<resources>
    <string name="app_name">WeatherApp</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="created_by">Created By</string>
    <string name="update_data">Updated at: %1$s</string>
    <string name="min_temp">Min t: %1$s</string>
    <string name="max_temp">Max t: %1$s</string>
    <string name="save_button">Save</string>
    <string name="change_data">Weather data updated!</string>
    <string name="lang_app">Language</string>
    <string name="temp_app">Temperature</string>
    <string name="mode_app">Dark theme</string>
    <string name="country_for_weather">Country</string>
    <string name="about_dev">alex.prog.99</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="location">Location</string>
    <string name="help">Help</string>
    <string name="notifications">Notifications</string>
    <string name="dark_mode">Dark mode</string>
    <string name="exit">Exit</string>

    <!-- DAILY FORECAST -->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="internet_error">The connection to the Internet is lost.</string>

    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>

    <string name="version_name">Version: %1$s</string>

    <!-- ERROR -->
    <string name="error">Something went wrong.</string>
</resources>