<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".ui.fragments.settings.SettingsFragment">

    <FrameLayout
        android:id="@+id/backFL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@drawable/back_bg"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/locationRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/backBG">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/userLocationTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/openLocationSettingIV"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap"
                    tools:text="London, Great Bretain" />

                <ImageView
                    android:id="@+id/openLocationSettingIV"
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/notificationRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/backBG">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/notifications"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    tools:ignore="RelativeOverlap" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/notificationSC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:checked="false"
                    android:thumb="@drawable/notification_thumb"
                    app:track="@drawable/notification_track" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/languageRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/backBG">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/lang_app"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/userLanguageTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/openLanguageSettingIV"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap"
                    tools:text="EN" />

                <ImageView
                    android:id="@+id/openLanguageSettingIV"
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/temperatureRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/backBG">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/temp_app"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/userTempValueTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/openTempoSettingIV"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap"
                    tools:text="C" />

                <ImageView
                    android:id="@+id/openTempoSettingIV"
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/helpRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/backBG">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/help"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/openHelpIV"
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/exitRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/backBG">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/exit"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/exitIV"
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_logout"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <TextView
                android:id="@+id/versionAppTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:textSize="10sp"
                tools:text="Version 8.2.12"
                tools:ignore="SmallSp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>