<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshSRL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".ui.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/loaderFL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mainBackground"
            android:elevation="1dp"
            android:visibility="gone"
            tools:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/white" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/addressContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <AutoCompleteTextView
                    android:id="@+id/cityACTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:ignore="LabelFor"
                    tools:text="London" />

                <aglibs.loading.skeleton.view.SkeletonTextView
                    android:id="@+id/countryTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:includeFontPadding="false"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:text="GB" />

            </LinearLayout>


            <aglibs.loading.skeleton.view.SkeletonTextView
                android:id="@+id/updatedAtTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/update_data"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/overviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/detailsContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressContainer">

            <aglibs.loading.skeleton.view.SkeletonTextView
                android:id="@+id/statusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:text="Clear Sky" />

            <aglibs.loading.skeleton.view.SkeletonTextView
                android:id="@+id/temperatureTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/white"
                android:textSize="90sp"
                tools:text="29°C" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <aglibs.loading.skeleton.view.SkeletonTextView
                    android:id="@+id/tempMinTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:text="@string/min_temp"
                    android:textColor="@color/white" />

                <aglibs.loading.skeleton.view.SkeletonTextView
                    android:id="@+id/tempMaxTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="25dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <aglibs.loading.skeleton.layout.SkeletonLinearLayout
                    android:id="@+id/sunriseLL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@color/mainBackgroundInfoTab"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/sunrise"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/sunrise"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/sunriseTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        tools:text="06:40 AM" />

                </aglibs.loading.skeleton.layout.SkeletonLinearLayout>

                <aglibs.loading.skeleton.layout.SkeletonLinearLayout
                    android:id="@+id/sunsetLL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@color/mainBackgroundInfoTab"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/sunset"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/sunset"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/sunsetTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        tools:text="06:40 AM" />

                </aglibs.loading.skeleton.layout.SkeletonLinearLayout>

                <aglibs.loading.skeleton.layout.SkeletonLinearLayout
                    android:id="@+id/windLL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/mainBackgroundInfoTab"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/wind"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/wind"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/windTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        tools:text="06:40 AM" />

                </aglibs.loading.skeleton.layout.SkeletonLinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <aglibs.loading.skeleton.layout.SkeletonLinearLayout
                    android:id="@+id/pressureLL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@color/mainBackgroundInfoTab"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/pressure"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/pressure"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/pressureTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        tools:text="06:40 AM" />

                </aglibs.loading.skeleton.layout.SkeletonLinearLayout>

                <aglibs.loading.skeleton.layout.SkeletonLinearLayout
                    android:id="@+id/humidityLL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@color/mainBackgroundInfoTab"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/humidity"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/humidity"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/humidityTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        tools:text="06:40 AM" />

                </aglibs.loading.skeleton.layout.SkeletonLinearLayout>

                <aglibs.loading.skeleton.layout.SkeletonLinearLayout
                    android:id="@+id/aboutLL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/mainBackgroundInfoTab"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/info"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/created_by"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/aboutTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/about_dev"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </aglibs.loading.skeleton.layout.SkeletonLinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>